[package]
name = "hello-world-rust"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "^4"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
env_logger = { version = "0.10.0", features = [] }
log = "^0.4.0"
strum_macros = "^0.25"
strum = "^0.25"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.28"
serde_json = "1"
derive_more = "^0.99"
reqwest = "0.11.20"
csv = "1.2.2"
lettre = "0.10.4"
dotenv = "0.15.0"
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
diesel = { version = "2.1.0", features = ["postgres"] }
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-rapidoc = { version = "0.1", features = ["actix-web"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
utoipa-redoc = { version = "0.1", features = ["actix-web"] }
handlebars = "4.4.0"
xlsxwriter = "0.6.0"
tempdir = { version = "0.3.7", features = [] }
mime_guess = "2.0.4"


[dev-dependencies]

